[tool.poetry]
name = "449-midterm"
version = "0.1.0"
description = ""
authors = ["NADEE-MJ <nadeem.maida@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
flask-mysqldb = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
